# solana-vanity-address-rs

./: .gitignore  API.md  Cargo.toml  Dockerfile  Procfile  Procfile.heroku  RAILWAY.md  README.md  RustConfig  SECURITY.md  build.sh  generate_bonk_addresses.sh  heroku-build.sh  nixpacks.toml  railway.json  start.sh
src/: api.rs  lib.rs  main.rs
tests/: vanity_tests.rs
