[package]
name = "solana-vanity"
version = "0.1.0"
edition = "2024"
description = "A fast CLI and library for generating Solana vanity addresses."
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/solana-vanity-address-rs"

[dependencies]
solana-sdk = "1.18" # Use a recent version
bs58 = "0.4"
rayon = "1.9" # For multithreading
clap = { version = "4.0", features = ["derive"] } # For CLI arguments
num_cpus = "1.17.0"
