[package]
name = "solana-vanity"
version = "0.1.1"
edition = "2024"
description = "A fast CLI and library for generating Solana vanity addresses."
authors = ["Kenny"]
license = "MIT"
repository = "https://github.com/devgreek/solana-vanity-address-rs"

[dependencies]
solana-sdk = "2.1.1" # Use a recent version
bs58 = "0.4"
rayon = "1.9" # For multithreading
clap = { version = "4.0", features = ["derive"] } # For CLI arguments
num_cpus = "1.17.0"
base64 = "0.22.1"

# API dependencies (optional)
actix-web = { version = "4.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
env_logger = { version = "0.10", optional = true }

[features]
default = []
api = ["actix-web", "serde", "serde_json", "env_logger"]

[[bin]]
name = "solana-vanity"
path = "src/main.rs"

[[bin]]
name = "solana-vanity-api"
path = "src/bin/api.rs"
required-features = ["api"]

[dev-dependencies]
num_cpus = "1.17.0"
